export enum DiscountConditionType {
  SEQUENCE,
  PERIOD,
}
