@startuml
class Customer {
    -name: string
    -id: string
    +getName(): string
    +setName(name: string): void
    +getId(): string
    +setId(id: string): void
}
enum DiscountConditionType {
    SEQUENCE
    PERIOD
}
class Money {
    -amount: number
    +plus(amount: Money): Money
    +minus(amount: Money): Money
    +times(percent: number): Money
    +isLessThan(other: Money): boolean
    +isGreaterThanOrEqual(other: Money): boolean
    +{static} ZERO: Money
    +{static} wons(amount: number): Money
}
enum MovieType {
    ACOUNT_DISCOUNT
    PERCENT_DISCOUNT
    NONE_DISCOUNT
}
class Movie {
    -title: string
    -runningtime: number
    -fee: Money
    -discountConditions: DiscountCondition[]
    -movieType: MovieType
    -discountAmount: Money
    -discountPercent: number
    +getMovieType(): MovieType
    +setMovieType(movieType: MovieType): void
    +getFee(): Money
    +setFee(fee: Money): void
    +getDiscountConditions(): DiscountCondition[]
    +setDiscountConditions(discountConditions: DiscountCondition[]): void
    +getDiscountAmount(): Money
    +setDiscountAmount(discountAmount: Money): void
    +getDiscountPercent(): number
    +setDiscountPercent(discountPercent: number): void
}
class Screening {
    -movie: Movie
    -sequence: number
    -whenScreended: Date
    +calculateDiscountFee(discountable: boolean, audienceCount: number): Money
    -calculateDiscountedFee(movie: Movie): Money
    -calculateAmountDiscountedFee(movie: Movie): Money
    -calculatePercentDiscountedFee(movie: Movie): Money
    -calculateNoneDiscountedFee(): Money
    +isDiscountable(): boolean
    +getMovie(): Movie
    +setMovie(movie: Movie): void
    +getSequence(): number
    +setSequence(sequence: number): void
    +getWhenScreended(): Date
    +setWhenScreended(whenScreended: Date): void
}
class DiscountCondition {
    -type: DiscountConditionType
    -sequence: number
    -dayOfWeek: number
    -startTime: Date
    -endTime: Date
    +isDiscountable(screening: Screening): boolean
    -isSatisfiedByPeriod(screening: Screening): boolean
    -isSatisfiedBySequence(screening: Screening): boolean
}
class Reservation {
    -customer: Customer
    -screening: Screening
    -fee: Money
    -audienceCount: number
    +getCustomer(): Customer
    +setCustomer(customer: Customer): void
    +getScreening(): Screening
    +setScreening(screening: Screening): void
    +getFee(): Money
    +setFee(fee: Money): void
    +getAudienceCount(): number
    +setAudienceCount(audienceCount: number): void
}
class ReservationAgency {
    +reserve(screening: Screening, customer: Customer, audienceCount: number): Reservation
    -checkDiscountable(screening: Screening): boolean
    -createReservation(customer: Customer, screening: Screening, fee: Money, audienceCount: number): Reservation
}
Movie *-- Money
Movie *-- DiscountCondition
Movie *-- MovieType
Screening *-- Movie
Screening *-- Money
DiscountCondition *-- DiscountConditionType
DiscountCondition *-- Screening
Reservation *-- Customer
Reservation *-- Screening
Reservation *-- Money
ReservationAgency *-- Screening
ReservationAgency *-- Customer
ReservationAgency *-- Reservation
ReservationAgency *-- Money

hide Money
hide Customer
hide Reservation
@enduml